# mixerd

./: .gitignore  Main.hs  Main2.hs  Mixer.hs  cabal.sandbox.config  mixerd.cabal
Mixer/: Pulse.hs  PulseAudio.hs
Mixer/Backend/: PulseAudio.hs
Mixer/UI/: Console.hs
Network/: DBus.hs
